# Qt-Core-Modules-2_1

./: CMakeLists.txt  main.cpp
